--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "@angular/common": "~11.0.3",
         "@angular/compiler": "~11.0.3",
         "@angular/core": "~11.0.3",
+        "@angular/fire": "^6.1.4",
         "@angular/forms": "~11.0.3",
+        "@angular/http": "^7.2.16",
         "@angular/platform-browser": "~11.0.3",
         "@angular/platform-browser-dynamic": "~11.0.3",
         "@angular/router": "~11.0.3",
