--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e"
-
     },
     "private": true,
     "dependencies": {
@@ -16,10 +15,12 @@
         "@angular/common": "~11.0.3",
         "@angular/compiler": "~11.0.3",
         "@angular/core": "~11.0.3",
+        "@angular/fire": "^6.1.4",
         "@angular/forms": "~11.0.3",
         "@angular/platform-browser": "~11.0.3",
         "@angular/platform-browser-dynamic": "~11.0.3",
         "@angular/router": "~11.0.3",
+        "firebase": "^8.2.2",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
         "zone.js": "~0.10.2"
