--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "@angular/platform-browser": "^11.0.8",
         "@angular/platform-browser-dynamic": "~11.0.3",
         "@angular/router": "~11.0.3",
-        "firebase": "^8.2.2",
+        "angularfire2": "^5.4.2",
+        "firebase": "^8.2.4",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
         "zone.js": "~0.10.2"
