--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@angular/router": "~11.0.3",
         "angularfire2": "^5.4.2",
         "firebase": "^8.2.4",
+        "firebase-admin": "^9.4.2",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
         "zone.js": "~0.10.2"
