--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/body-parser": "^1.19.0",
         "@types/express": "^4.17.11",
         "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "firebase": "^8.2.4",
         "firebase-admin": "^9.4.2",
         "mongoose": "^5.11.18",
