add CC e recursos

--- a/package.json
+++ b/package.json
@@ -22,6 +22,15 @@
         "@angular/platform-browser": "^11.0.8",
         "@angular/platform-browser-dynamic": "~11.0.3",
         "@angular/router": "~11.0.3",
+        "@fortawesome/angular-fontawesome": "^0.8.2",
+        "@fortawesome/fontawesome-svg-core": "^1.2.34",
+        "@fortawesome/free-brands-svg-icons": "^5.15.2",
+        "@fortawesome/free-regular-svg-icons": "^5.15.2",
+        "@fortawesome/free-solid-svg-icons": "^5.15.2",
+        "@fortawesome/pro-duotone-svg-icons": "^5.15.2",
+        "@fortawesome/pro-light-svg-icons": "^5.15.2",
+        "@fortawesome/pro-regular-svg-icons": "^5.15.2",
+        "@fortawesome/pro-solid-svg-icons": "^5.15.2",
         "@types/body-parser": "^1.19.0",
         "@types/express": "^4.17.11",
         "body-parser": "^1.19.0",
