--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "cors": "^2.8.5",
     "firebase": "^8.2.4",
     "firebase-admin": "^9.4.2",
+    "mat-currency-format": "^0.0.7",
     "material-design-icons": "^3.0.1",
     "mongoose": "^5.11.18",
+    "ng2-currency-mask": "^11.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
