--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "material-design-icons": "^3.0.1",
         "mongoose": "^5.11.18",
         "ng2-currency-mask": "^11.0.0",
+        "node-localstorage": "^2.1.6",
         "nodemailer": "^6.5.0",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
