--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "ng2-currency-mask": "^11.0.0",
         "node-localstorage": "^2.1.6",
         "nodemailer": "^6.5.0",
+        "nodemon": "^2.0.7",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
         "zone.js": "~0.10.2"
